Fixed header logo on mobile landscape screens

--- a/index.css
+++ b/index.css
@@ -198,8 +198,7 @@ main .location
 {
 	#logo
 	{
-		margin-top: 12vh;
-		max-height: 60vh;
+		margin-top: 1vh;
 	}
 }
 
